# md2pdf_simple

./: README.md  input.md  pyproject.toml  test_math.md
src/md2pdf/: __init__.py  cli.py  converter.py  mathjax_processor.py  parser.py  pdf_generator.py
