[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md2pdf"
version = "0.1.0"
description = "A lightweight command-line tool to convert Markdown to PDF"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "markdown>=3.5.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
]

[project.scripts]
md2pdf = "md2pdf.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/md2pdf"
Repository = "https://github.com/yourusername/md2pdf"

[tool.hatch.build.targets.wheel]
packages = ["src/md2pdf"]